--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,12 @@
 
     <title>Calc Divisas Ven</title>
 
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="stylesheet" href="bulma.min.css" />
-    <link rel="stylesheet" href="/global.css" />
-    <link rel="stylesheet" href="/build/bundle.css" />
+    <link rel="stylesheet" href="global.css" />
+    <link rel="stylesheet" href="build/bundle.css" />
 
-    <script defer src="/build/bundle.js"></script>
+    <script defer src="build/bundle.js"></script>
   </head>
 
   <body></body>
