--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="global.css" />
     <link rel="stylesheet" href="build/bundle.css" />
 
+    <script src="https://cdn.jsdelivr.net/pyodide/v0.17.0/full/pyodide.js"></script>
     <script defer src="build/bundle.js"></script>
   </head>
 
